parser.output
Nonterminals useless in grammar

   constant_expr_opt
   goto_statement
   if_else_statement
   labeled_statement
   typedef_name


Terminals unused in grammar

   ELLIPSIS
   CASE
   DEFAULT
   ENUM
   GOTO
   INLINE
   STRUCT
   SWITCH
   UNION
   _IMAGINARY


Rules useless in grammar

  254 constant_expr_opt: %empty
  255                  | constant_expr


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: top_level_decl
    2                 | translation_unit top_level_decl

    3 top_level_decl: declaration
    4               | function_def

    5 function_def: function_def_specifier fn_compound_statement

    6 function_def_specifier: declarator
    7                       | declarator declaration_list
    8                       | declaration_specifiers declarator
    9                       | declaration_specifiers declarator declaration_list

   10 block_item: declaration
   11           | statement

   12 declaration_list: declaration
   13                 | declaration_list declaration

   14 block_item_list_opt: %empty
   15                    | block_item_list

   16 block_item_list: block_item
   17                | block_item_list block_item

   18 $@1: %empty

   19 fn_compound_statement: '{' $@1 block_item_list_opt '}'

   20 statement: expression_statement
   21          | compound_statement
   22          | conditional_statement
   23          | iter_statement
   24          | break_statement
   25          | continue_statement
   26          | return_statement
   27          | null_statement

   28 expression_statement: expr ';'

   29 $@2: %empty

   30 compound_statement: '{' $@2 block_item_list_opt '}'

   31 conditional_statement: if_statement

   32 if_statement: IF '(' expr ')' statement
   33             | IF '(' expr ')' statement ELSE statement

   34 iter_statement: while_statement
   35               | do_statement
   36               | for_statement

   37 while_statement: WHILE '(' expr ')' statement

   38 do_statement: DO statement WHILE '(' expr ')' ';'

   39 for_statement: FOR for_expressions statement

   40 initial_clause: expr
   41               | declaration

   42 for_expressions: '(' ';' ';' ')'
   43                | '(' initial_clause ';' ';' ')'
   44                | '(' ';' expr ';' ')'
   45                | '(' ';' expr ';' expr ')'
   46                | '(' ';' ';' expr ')'
   47                | '(' initial_clause ';' expr ';' ')'
   48                | '(' initial_clause ';' expr ';' expr ')'
   49                | '(' initial_clause ';' ';' expr ')'

   50 break_statement: BREAK ';'

   51 continue_statement: CONTINUE ';'

   52 return_statement: RETURN ';'
   53                 | RETURN expr ';'

   54 null_statement: ';'

   55 declaration: declaration_specifiers init_declarator_list_opt ';'

   56 declaration_specifiers_opt: %empty
   57                           | declaration_specifiers

   58 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   59                       | type_specifier declaration_specifiers_opt
   60                       | type_qualifier declaration_specifiers_opt

   61 storage_class_specifier: AUTO
   62                        | EXTERN
   63                        | REGISTER
   64                        | STATIC
   65                        | TYPEDEF

   66 init_declarator_list_opt: %empty
   67                         | init_declarator_list

   68 init_declarator_list: initialized_declarator
   69                     | init_declarator_list ',' initialized_declarator

   70 initialized_declarator: declarator
   71                       | declarator '=' initializer

   72 declarator: ptr_declarator
   73           | direct_declarator

   74 direct_declarator: simple_declarator
   75                  | '(' declarator ')'
   76                  | function_declarator
   77                  | array_declarator

   78 simple_declarator: IDENT

   79 ptr_declarator: pointer direct_declarator

   80 pointer: '*'
   81        | '*' type_qualifier_list
   82        | '*' pointer
   83        | '*' type_qualifier_list pointer

   84 type_qualifier_list: type_qualifier
   85                    | type_qualifier_list type_qualifier

   86 type_qualifier: CONST
   87               | VOLATILE
   88               | RESTRICT

   89 parameter_type_list: parameter_list

   90 parameter_list: parameter_decl
   91               | parameter_list ',' parameter_decl

   92 parameter_decl: declaration_specifiers declarator
   93               | declaration_specifiers abstract_declarator_opt

   94 function_declarator: direct_declarator '(' parameter_type_list ')'
   95                    | direct_declarator '(' ')'

   96 array_declarator: direct_declarator '[' ']'
   97                 | direct_declarator '[' NUMBER ']'

   98 abstract_declarator_opt: %empty
   99                        | abstract_declarator

  100 type_name: declaration_specifiers abstract_declarator_opt

  101 abstract_declarator: pointer
  102                    | direct_abstract_declarator
  103                    | pointer direct_abstract_declarator

  104 direct_abstract_declarator_opt: %empty
  105                               | direct_abstract_declarator

  106 direct_abstract_declarator: '(' abstract_declarator ')'
  107                           | direct_abstract_declarator_opt '[' ']'
  108                           | direct_abstract_declarator_opt '[' NUMBER ']'

  109 initializer: assign_expr
  110            | '{' initializer_list '}'
  111            | '{' initializer_list ',' '}'

  112 initializer_list: designation_opt initializer
  113                 | initializer_list ',' designation_opt initializer

  114 designation_opt: %empty
  115                | designation

  116 designation: designator_list '='

  117 designator_list: designator
  118                | designator_list designator

  119 designator: '[' constant_expr ']'

  120 constant_expr: cond_expr

  121 type_specifier: float_type_specifier
  122               | int_type_specifier
  123               | void_type_specifier

  124 int_type_specifier: signed_type_specifier
  125                   | unsigned_type_specifier
  126                   | char_type_specifier
  127                   | bool_type_specifier

  128 signed_type_specifier: SHORT
  129                      | SHORT INT
  130                      | SIGNED SHORT
  131                      | SIGNED SHORT INT
  132                      | INT
  133                      | SIGNED
  134                      | SIGNED INT
  135                      | LONG
  136                      | LONG INT
  137                      | SIGNED LONG
  138                      | SIGNED LONG INT
  139                      | LONG LONG
  140                      | LONG LONG INT
  141                      | SIGNED LONG LONG
  142                      | SIGNED LONG LONG INT

  143 unsigned_type_specifier: UNSIGNED SHORT
  144                        | UNSIGNED SHORT INT
  145                        | UNSIGNED
  146                        | UNSIGNED INT
  147                        | UNSIGNED LONG
  148                        | UNSIGNED LONG INT
  149                        | UNSIGNED LONG LONG
  150                        | UNSIGNED LONG LONG INT

  151 char_type_specifier: CHAR
  152                    | SIGNED CHAR
  153                    | UNSIGNED CHAR

  154 bool_type_specifier: _BOOL

  155 float_type_specifier: FLOAT
  156                     | DOUBLE
  157                     | LONG DOUBLE
  158                     | cmplx_type_specifier

  159 cmplx_type_specifier: FLOAT _COMPLEX
  160                     | DOUBLE _COMPLEX
  161                     | LONG DOUBLE _COMPLEX

  162 void_type_specifier: VOID

  163 primary_expr: IDENT
  164             | constant
  165             | parenth_expr

  166 parenth_expr: '(' expr ')'

  167 postfix_expr: primary_expr
  168             | subscript_expr
  169             | component_selec_expr
  170             | func_call
  171             | postincdec_expr

  172 subscript_expr: postfix_expr '[' expr ']'

  173 component_selec_expr: direct_comp_selec
  174                     | indirect_comp_selec

  175 direct_comp_selec: postfix_expr '.' IDENT

  176 indirect_comp_selec: postfix_expr INDSEL IDENT

  177 func_call: postfix_expr '(' expr_list ')'

  178 expr_list: %empty
  179          | assign_expr
  180          | expr_list ',' assign_expr

  181 prepost_pm_op: PLUSPLUS
  182              | MINUSMINUS

  183 postincdec_expr: postfix_expr prepost_pm_op

  184 unary_expr: postfix_expr
  185           | sizeof_expr
  186           | unary_op_expr
  187           | preincdec_expr

  188 cast_expr: unary_expr
  189          | '(' type_name ')' cast_expr

  190 sizeof_expr: SIZEOF unary_expr
  191            | SIZEOF '(' type_name ')'

  192 unary_op_expr: unary_op cast_expr

  193 unary_op: '-'
  194         | '+'
  195         | '!'
  196         | '~'
  197         | '&'
  198         | '*'

  199 preincdec_expr: prepost_pm_op unary_expr

  200 mult_op: '*'
  201        | '/'
  202        | '%'

  203 mult_expr: cast_expr
  204          | mult_expr mult_op cast_expr

  205 add_op: '+'
  206       | '-'

  207 add_expr: mult_expr
  208         | add_expr add_op mult_expr

  209 shift_op: SHL
  210         | SHR

  211 shift_expr: add_expr
  212           | shift_expr shift_op add_expr

  213 relate_op: '<'
  214          | LTEQ
  215          | '>'
  216          | GTEQ

  217 relate_expr: shift_expr
  218            | relate_expr relate_op shift_expr

  219 eq_op: EQEQ
  220      | NOTEQ

  221 eq_expr: relate_expr
  222        | eq_expr eq_op relate_expr

  223 bit_or_expr: bit_xor_expr
  224            | bit_or_expr '|' bit_xor_expr

  225 bit_xor_expr: bit_and_expr
  226             | bit_xor_expr '^' bit_and_expr

  227 bit_and_expr: eq_expr
  228             | bit_and_expr '&' eq_expr

  229 logical_or_expr: logical_and_expr
  230                | logical_or_expr LOGOR logical_and_expr

  231 logical_and_expr: bit_or_expr
  232                 | logical_and_expr LOGAND bit_or_expr

  233 cond_expr: logical_or_expr
  234          | logical_or_expr '?' expr ':' cond_expr

  235 assign_op: PLUSEQ
  236          | MINUSEQ
  237          | TIMESEQ
  238          | DIVEQ
  239          | MODEQ
  240          | SHLEQ
  241          | SHREQ
  242          | ANDEQ
  243          | XOREQ
  244          | OREQ

  245 assign_expr: cond_expr
  246            | unary_expr '=' assign_expr
  247            | unary_expr assign_op assign_expr

  248 comma_expr: assign_expr
  249           | comma_expr ',' assign_expr

  250 expr: comma_expr

  251 constant: NUMBER
  252         | STRING
  253         | CHARLIT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 195
'%' (37) 202
'&' (38) 197 228
'(' (40) 32 33 37 38 42 43 44 45 46 47 48 49 75 94 95 106 166 177 189
    191
')' (41) 32 33 37 38 42 43 44 45 46 47 48 49 75 94 95 106 166 177 189
    191
'*' (42) 80 81 82 83 198 200
'+' (43) 194 205
',' (44) 69 91 111 113 180 249
'-' (45) 193 206
'.' (46) 175
'/' (47) 201
':' (58) 234
';' (59) 28 38 42 43 44 45 46 47 48 49 50 51 52 53 54 55
'<' (60) 213
'=' (61) 71 116 246
'>' (62) 215
'?' (63) 234
'[' (91) 96 97 107 108 119 172
']' (93) 96 97 107 108 119 172
'^' (94) 226
'{' (123) 19 30 110 111
'|' (124) 224
'}' (125) 19 30 110 111
'~' (126) 196
error (256)
IDENT (258) 78 163 175 176
CHARLIT (259) 253
STRING (260) 252
NUMBER (261) 97 108 251
INDSEL (262) 176
PLUSPLUS (263) 181
MINUSMINUS (264) 182
SHL (265) 209
SHR (266) 210
LTEQ (267) 214
GTEQ (268) 216
EQEQ (269) 219
NOTEQ (270) 220
LOGAND (271) 232
LOGOR (272) 230
ELLIPSIS (273)
TIMESEQ (274) 237
DIVEQ (275) 238
MODEQ (276) 239
PLUSEQ (277) 235
MINUSEQ (278) 236
SHLEQ (279) 240
SHREQ (280) 241
ANDEQ (281) 242
OREQ (282) 244
XOREQ (283) 243
AUTO (284) 61
BREAK (285) 50
CASE (286)
CHAR (287) 151 152 153
CONST (288) 86
CONTINUE (289) 51
DEFAULT (290)
DO (291) 38
DOUBLE (292) 156 157 160 161
ELSE (293) 33
ENUM (294)
EXTERN (295) 62
FLOAT (296) 155 159
FOR (297) 39
GOTO (298)
IF (299) 32 33
INLINE (300)
INT (301) 129 131 132 134 136 138 140 142 144 146 148 150
LONG (302) 135 136 137 138 139 140 141 142 147 148 149 150 157 161
REGISTER (303) 63
RESTRICT (304) 88
RETURN (305) 52 53
SHORT (306) 128 129 130 131 143 144
SIGNED (307) 130 131 133 134 137 138 141 142 152
SIZEOF (308) 190 191
STATIC (309) 64
STRUCT (310)
SWITCH (311)
TYPEDEF (312) 65
UNION (313)
UNSIGNED (314) 143 144 145 146 147 148 149 150 153
VOID (315) 162
VOLATILE (316) 87
WHILE (317) 37 38
_BOOL (318) 154
_COMPLEX (319) 159 160 161
_IMAGINARY (320)
THEN (321)


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
translation_unit (92)
    on left: 1 2, on right: 0 2
top_level_decl (93)
    on left: 3 4, on right: 1 2
function_def (94)
    on left: 5, on right: 4
function_def_specifier (95)
    on left: 6 7 8 9, on right: 5
block_item (96)
    on left: 10 11, on right: 16 17
declaration_list (97)
    on left: 12 13, on right: 7 9 13
block_item_list_opt (98)
    on left: 14 15, on right: 19 30
block_item_list (99)
    on left: 16 17, on right: 15 17
fn_compound_statement (100)
    on left: 19, on right: 5
$@1 (101)
    on left: 18, on right: 19
statement (102)
    on left: 20 21 22 23 24 25 26 27, on right: 11 32 33 37 38 39
expression_statement (103)
    on left: 28, on right: 20
compound_statement (104)
    on left: 30, on right: 21
$@2 (105)
    on left: 29, on right: 30
conditional_statement (106)
    on left: 31, on right: 22
if_statement (107)
    on left: 32 33, on right: 31
iter_statement (108)
    on left: 34 35 36, on right: 23
while_statement (109)
    on left: 37, on right: 34
do_statement (110)
    on left: 38, on right: 35
for_statement (111)
    on left: 39, on right: 36
initial_clause (112)
    on left: 40 41, on right: 43 47 48 49
for_expressions (113)
    on left: 42 43 44 45 46 47 48 49, on right: 39
break_statement (114)
    on left: 50, on right: 24
continue_statement (115)
    on left: 51, on right: 25
return_statement (116)
    on left: 52 53, on right: 26
null_statement (117)
    on left: 54, on right: 27
declaration (118)
    on left: 55, on right: 3 10 12 13 41
declaration_specifiers_opt (119)
    on left: 56 57, on right: 58 59 60
declaration_specifiers (120)
    on left: 58 59 60, on right: 8 9 55 57 92 93 100
storage_class_specifier (121)
    on left: 61 62 63 64 65, on right: 58
init_declarator_list_opt (122)
    on left: 66 67, on right: 55
init_declarator_list (123)
    on left: 68 69, on right: 67 69
initialized_declarator (124)
    on left: 70 71, on right: 68 69
declarator (125)
    on left: 72 73, on right: 6 7 8 9 70 71 75 92
direct_declarator (126)
    on left: 74 75 76 77, on right: 73 79 94 95 96 97
simple_declarator (127)
    on left: 78, on right: 74
ptr_declarator (128)
    on left: 79, on right: 72
pointer (129)
    on left: 80 81 82 83, on right: 79 82 83 101 103
type_qualifier_list (130)
    on left: 84 85, on right: 81 83 85
type_qualifier (131)
    on left: 86 87 88, on right: 60 84 85
parameter_type_list (132)
    on left: 89, on right: 94
parameter_list (133)
    on left: 90 91, on right: 89 91
parameter_decl (134)
    on left: 92 93, on right: 90 91
function_declarator (135)
    on left: 94 95, on right: 76
array_declarator (136)
    on left: 96 97, on right: 77
abstract_declarator_opt (137)
    on left: 98 99, on right: 93 100
type_name (138)
    on left: 100, on right: 189 191
abstract_declarator (139)
    on left: 101 102 103, on right: 99 106
direct_abstract_declarator_opt (140)
    on left: 104 105, on right: 107 108
direct_abstract_declarator (141)
    on left: 106 107 108, on right: 102 103 105
initializer (142)
    on left: 109 110 111, on right: 71 112 113
initializer_list (143)
    on left: 112 113, on right: 110 111 113
designation_opt (144)
    on left: 114 115, on right: 112 113
designation (145)
    on left: 116, on right: 115
designator_list (146)
    on left: 117 118, on right: 116 118
designator (147)
    on left: 119, on right: 117 118
constant_expr (148)
    on left: 120, on right: 119
type_specifier (149)
    on left: 121 122 123, on right: 59
int_type_specifier (150)
    on left: 124 125 126 127, on right: 122
signed_type_specifier (151)
    on left: 128 129 130 131 132 133 134 135 136 137 138 139 140 141
    142, on right: 124
unsigned_type_specifier (152)
    on left: 143 144 145 146 147 148 149 150, on right: 125
char_type_specifier (153)
    on left: 151 152 153, on right: 126
bool_type_specifier (154)
    on left: 154, on right: 127
float_type_specifier (155)
    on left: 155 156 157 158, on right: 121
cmplx_type_specifier (156)
    on left: 159 160 161, on right: 158
void_type_specifier (157)
    on left: 162, on right: 123
primary_expr (158)
    on left: 163 164 165, on right: 167
parenth_expr (159)
    on left: 166, on right: 165
postfix_expr (160)
    on left: 167 168 169 170 171, on right: 172 175 176 177 183 184
subscript_expr (161)
    on left: 172, on right: 168
component_selec_expr (162)
    on left: 173 174, on right: 169
direct_comp_selec (163)
    on left: 175, on right: 173
indirect_comp_selec (164)
    on left: 176, on right: 174
func_call (165)
    on left: 177, on right: 170
expr_list (166)
    on left: 178 179 180, on right: 177 180
prepost_pm_op (167)
    on left: 181 182, on right: 183 199
postincdec_expr (168)
    on left: 183, on right: 171
unary_expr (169)
    on left: 184 185 186 187, on right: 188 190 199 246 247
cast_expr (170)
    on left: 188 189, on right: 189 192 203 204
sizeof_expr (171)
    on left: 190 191, on right: 185
unary_op_expr (172)
    on left: 192, on right: 186
unary_op (173)
    on left: 193 194 195 196 197 198, on right: 192
preincdec_expr (174)
    on left: 199, on right: 187
mult_op (175)
    on left: 200 201 202, on right: 204
mult_expr (176)
    on left: 203 204, on right: 204 207 208
add_op (177)
    on left: 205 206, on right: 208
add_expr (178)
    on left: 207 208, on right: 208 211 212
shift_op (179)
    on left: 209 210, on right: 212
shift_expr (180)
    on left: 211 212, on right: 212 217 218
relate_op (181)
    on left: 213 214 215 216, on right: 218
relate_expr (182)
    on left: 217 218, on right: 218 221 222
eq_op (183)
    on left: 219 220, on right: 222
eq_expr (184)
    on left: 221 222, on right: 222 227 228
bit_or_expr (185)
    on left: 223 224, on right: 224 231 232
bit_xor_expr (186)
    on left: 225 226, on right: 223 224 226
bit_and_expr (187)
    on left: 227 228, on right: 225 226 228
logical_or_expr (188)
    on left: 229 230, on right: 230 233 234
logical_and_expr (189)
    on left: 231 232, on right: 229 230 232
cond_expr (190)
    on left: 233 234, on right: 120 234 245
assign_op (191)
    on left: 235 236 237 238 239 240 241 242 243 244, on right: 247
assign_expr (192)
    on left: 245 246 247, on right: 109 179 180 246 247 248 249
comma_expr (193)
    on left: 248 249, on right: 249 250
expr (194)
    on left: 250, on right: 28 32 33 37 38 40 44 45 46 47 48 49 53
    166 172 234
constant (195)
    on left: 251 252 253, on right: 164


State 0

    0 $accept: . translation_unit $end

    IDENT     shift, and go to state 1
    AUTO      shift, and go to state 2
    CHAR      shift, and go to state 3
    CONST     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    REGISTER  shift, and go to state 10
    RESTRICT  shift, and go to state 11
    SHORT     shift, and go to state 12
    SIGNED    shift, and go to state 13
    STATIC    shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    VOLATILE  shift, and go to state 18
    _BOOL     shift, and go to state 19
    '('       shift, and go to state 20
    '*'       shift, and go to state 21

    translation_unit         go to state 22
    top_level_decl           go to state 23
    function_def             go to state 24
    function_def_specifier   go to state 25
    declaration              go to state 26
    declaration_specifiers   go to state 27
    storage_class_specifier  go to state 28
    declarator               go to state 29
    direct_declarator        go to state 30
    simple_declarator        go to state 31
    ptr_declarator           go to state 32
    pointer                  go to state 33
    type_qualifier           go to state 34
    function_declarator      go to state 35
    array_declarator         go to state 36
    type_specifier           go to state 37
    int_type_specifier       go to state 38
    signed_type_specifier    go to state 39
    unsigned_type_specifier  go to state 40
    char_type_specifier      go to state 41
    bool_type_specifier      go to state 42
    float_type_specifier     go to state 43
    cmplx_type_specifier     go to state 44
    void_type_specifier      go to state 45


State 1

   78 simple_declarator: IDENT .

    $default  reduce using rule 78 (simple_declarator)


State 2

   61 storage_class_specifier: AUTO .

    $default  reduce using rule 61 (storage_class_specifier)


State 3

  151 char_type_specifier: CHAR .

    $default  reduce using rule 151 (char_type_specifier)


State 4

   86 type_qualifier: CONST .

    $default  reduce using rule 86 (type_qualifier)


State 5

  156 float_type_specifier: DOUBLE .
  160 cmplx_type_specifier: DOUBLE . _COMPLEX

    _COMPLEX  shift, and go to state 46

    $default  reduce using rule 156 (float_type_specifier)


State 6

   62 storage_class_specifier: EXTERN .

    $default  reduce using rule 62 (storage_class_specifier)


State 7

  155 float_type_specifier: FLOAT .
  159 cmplx_type_specifier: FLOAT . _COMPLEX

    _COMPLEX  shift, and go to state 47

    $default  reduce using rule 155 (float_type_specifier)


State 8

  132 signed_type_specifier: INT .

    $default  reduce using rule 132 (signed_type_specifier)


State 9

  135 signed_type_specifier: LONG .
  136                      | LONG . INT
  139                      | LONG . LONG
  140                      | LONG . LONG INT
  157 float_type_specifier: LONG . DOUBLE
  161 cmplx_type_specifier: LONG . DOUBLE _COMPLEX

    DOUBLE  shift, and go to state 48
    INT     shift, and go to state 49
    LONG    shift, and go to state 50

    $default  reduce using rule 135 (signed_type_specifier)


State 10

   63 storage_class_specifier: REGISTER .

    $default  reduce using rule 63 (storage_class_specifier)


State 11

   88 type_qualifier: RESTRICT .

    $default  reduce using rule 88 (type_qualifier)


State 12

  128 signed_type_specifier: SHORT .
  129                      | SHORT . INT

    INT  shift, and go to state 51

    $default  reduce using rule 128 (signed_type_specifier)


State 13

  130 signed_type_specifier: SIGNED . SHORT
  131                      | SIGNED . SHORT INT
  133                      | SIGNED .
  134                      | SIGNED . INT
  137                      | SIGNED . LONG
  138                      | SIGNED . LONG INT
  141                      | SIGNED . LONG LONG
  142                      | SIGNED . LONG LONG INT
  152 char_type_specifier: SIGNED . CHAR

    CHAR   shift, and go to state 52
    INT    shift, and go to state 53
    LONG   shift, and go to state 54
    SHORT  shift, and go to state 55

    $default  reduce using rule 133 (signed_type_specifier)


State 14

   64 storage_class_specifier: STATIC .

    $default  reduce using rule 64 (storage_class_specifier)


State 15

   65 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 65 (storage_class_specifier)


State 16

  143 unsigned_type_specifier: UNSIGNED . SHORT
  144                        | UNSIGNED . SHORT INT
  145                        | UNSIGNED .
  146                        | UNSIGNED . INT
  147                        | UNSIGNED . LONG
  148                        | UNSIGNED . LONG INT
  149                        | UNSIGNED . LONG LONG
  150                        | UNSIGNED . LONG LONG INT
  153 char_type_specifier: UNSIGNED . CHAR

    CHAR   shift, and go to state 56
    INT    shift, and go to state 57
    LONG   shift, and go to state 58
    SHORT  shift, and go to state 59

    $default  reduce using rule 145 (unsigned_type_specifier)


State 17

  162 void_type_specifier: VOID .

    $default  reduce using rule 162 (void_type_specifier)


State 18

   87 type_qualifier: VOLATILE .

    $default  reduce using rule 87 (type_qualifier)


State 19

  154 bool_type_specifier: _BOOL .

    $default  reduce using rule 154 (bool_type_specifier)


State 20

   75 direct_declarator: '(' . declarator ')'

    IDENT  shift, and go to state 1
    '('    shift, and go to state 20
    '*'    shift, and go to state 21

    declarator           go to state 60
    direct_declarator    go to state 30
    simple_declarator    go to state 31
    ptr_declarator       go to state 32
    pointer              go to state 33
    function_declarator  go to state 35
    array_declarator     go to state 36


State 21

   80 pointer: '*' .
   81        | '*' . type_qualifier_list
   82        | '*' . pointer
   83        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 4
    RESTRICT  shift, and go to state 11
    VOLATILE  shift, and go to state 18
    '*'       shift, and go to state 21

    $default  reduce using rule 80 (pointer)

    pointer              go to state 61
    type_qualifier_list  go to state 62
    type_qualifier       go to state 63


State 22

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . top_level_decl

    $end      shift, and go to state 64
    IDENT     shift, and go to state 1
    AUTO      shift, and go to state 2
    CHAR      shift, and go to state 3
    CONST     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    REGISTER  shift, and go to state 10
    RESTRICT  shift, and go to state 11
    SHORT     shift, and go to state 12
    SIGNED    shift, and go to state 13
    STATIC    shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    VOLATILE  shift, and go to state 18
    _BOOL     shift, and go to state 19
    '('       shift, and go to state 20
    '*'       shift, and go to state 21

    top_level_decl           go to state 65
    function_def             go to state 24
    function_def_specifier   go to state 25
    declaration              go to state 26
    declaration_specifiers   go to state 27
    storage_class_specifier  go to state 28
    declarator               go to state 29
    direct_declarator        go to state 30
    simple_declarator        go to state 31
    ptr_declarator           go to state 32
    pointer                  go to state 33
    type_qualifier           go to state 34
    function_declarator      go to state 35
    array_declarator         go to state 36
    type_specifier           go to state 37
    int_type_specifier       go to state 38
    signed_type_specifier    go to state 39
    unsigned_type_specifier  go to state 40
    char_type_specifier      go to state 41
    bool_type_specifier      go to state 42
    float_type_specifier     go to state 43
    cmplx_type_specifier     go to state 44
    void_type_specifier      go to state 45


State 23

    1 translation_unit: top_level_decl .

    $default  reduce using rule 1 (translation_unit)


State 24

    4 top_level_decl: function_def .

    $default  reduce using rule 4 (top_level_decl)


State 25

    5 function_def: function_def_specifier . fn_compound_statement

    '{'  shift, and go to state 66

    fn_compound_statement  go to state 67


State 26

    3 top_level_decl: declaration .

    $default  reduce using rule 3 (top_level_decl)


State 27

    8 function_def_specifier: declaration_specifiers . declarator
    9                       | declaration_specifiers . declarator declaration_list
   55 declaration: declaration_specifiers . init_declarator_list_opt ';'

    IDENT  shift, and go to state 1
    '('    shift, and go to state 20
    '*'    shift, and go to state 21

    $default  reduce using rule 66 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 68
    init_declarator_list      go to state 69
    initialized_declarator    go to state 70
    declarator                go to state 71
    direct_declarator         go to state 30
    simple_declarator         go to state 31
    ptr_declarator            go to state 32
    pointer                   go to state 33
    function_declarator       go to state 35
    array_declarator          go to state 36


State 28

   58 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO      shift, and go to state 2
    CHAR      shift, and go to state 3
    CONST     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    REGISTER  shift, and go to state 10
    RESTRICT  shift, and go to state 11
    SHORT     shift, and go to state 12
    SIGNED    shift, and go to state 13
    STATIC    shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    VOLATILE  shift, and go to state 18
    _BOOL     shift, and go to state 19

    $default  reduce using rule 56 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 72
    declaration_specifiers      go to state 73
    storage_class_specifier     go to state 28
    type_qualifier              go to state 34
    type_specifier              go to state 37
    int_type_specifier          go to state 38
    signed_type_specifier       go to state 39
    unsigned_type_specifier     go to state 40
    char_type_specifier         go to state 41
    bool_type_specifier         go to state 42
    float_type_specifier        go to state 43
    cmplx_type_specifier        go to state 44
    void_type_specifier         go to state 45


State 29

    6 function_def_specifier: declarator .
    7                       | declarator . declaration_list

    AUTO      shift, and go to state 2
    CHAR      shift, and go to state 3
    CONST     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    REGISTER  shift, and go to state 10
    RESTRICT  shift, and go to state 11
    SHORT     shift, and go to state 12
    SIGNED    shift, and go to state 13
    STATIC    shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    VOLATILE  shift, and go to state 18
    _BOOL     shift, and go to state 19

    $default  reduce using rule 6 (function_def_specifier)

    declaration_list         go to state 74
    declaration              go to state 75
    declaration_specifiers   go to state 76
    storage_class_specifier  go to state 28
    type_qualifier           go to state 34
    type_specifier           go to state 37
    int_type_specifier       go to state 38
    signed_type_specifier    go to state 39
    unsigned_type_specifier  go to state 40
    char_type_specifier      go to state 41
    bool_type_specifier      go to state 42
    float_type_specifier     go to state 43
    cmplx_type_specifier     go to state 44
    void_type_specifier      go to state 45


State 30

   73 declarator: direct_declarator .
   94 function_declarator: direct_declarator . '(' parameter_type_list ')'
   95                    | direct_declarator . '(' ')'
   96 array_declarator: direct_declarator . '[' ']'
   97                 | direct_declarator . '[' NUMBER ']'

    '('  shift, and go to state 77
    '['  shift, and go to state 78

    $default  reduce using rule 73 (declarator)


State 31

   74 direct_declarator: simple_declarator .

    $default  reduce using rule 74 (direct_declarator)


State 32

   72 declarator: ptr_declarator .

    $default  reduce using rule 72 (declarator)


State 33

   79 ptr_declarator: pointer . direct_declarator

    IDENT  shift, and go to state 1
    '('    shift, and go to state 20

    direct_declarator    go to state 79
    simple_declarator    go to state 31
    function_declarator  go to state 35
    array_declarator     go to state 36


State 34

   60 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO      shift, and go to state 2
    CHAR      shift, and go to state 3
    CONST     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    REGISTER  shift, and go to state 10
    RESTRICT  shift, and go to state 11
    SHORT     shift, and go to state 12
    SIGNED    shift, and go to state 13
    STATIC    shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    VOLATILE  shift, and go to state 18
    _BOOL     shift, and go to state 19

    $default  reduce using rule 56 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 80
    declaration_specifiers      go to state 73
    storage_class_specifier     go to state 28
    type_qualifier              go to state 34
    type_specifier              go to state 37
    int_type_specifier          go to state 38
    signed_type_specifier       go to state 39
    unsigned_type_specifier     go to state 40
    char_type_specifier         go to state 41
    bool_type_specifier         go to state 42
    float_type_specifier        go to state 43
    cmplx_type_specifier        go to state 44
    void_type_specifier         go to state 45


State 35

   76 direct_declarator: function_declarator .

    $default  reduce using rule 76 (direct_declarator)


State 36

   77 direct_declarator: array_declarator .

    $default  reduce using rule 77 (direct_declarator)


State 37

   59 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO      shift, and go to state 2
    CHAR      shift, and go to state 3
    CONST     shift, and go to state 4
    DOUBLE    shift, and go to state 5
    EXTERN    shift, and go to state 6
    FLOAT     shift, and go to state 7
    INT       shift, and go to state 8
    LONG      shift, and go to state 9
    REGISTER  shift, and go to state 10
    RESTRICT  shift, and go to state 11
    SHORT     shift, and go to state 12
    SIGNED    shift, and go to state 13
    STATIC    shift, and go to state 14
    TYPEDEF   shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    VOLATILE  shift, and go to state 18
    _BOOL     shift, and go to state 19

    $default  reduce using rule 56 (declaration_specifiers_opt)
